recursion.cons.nlast.Nlast.scala.error
Erreur de compilation :
Nlast:10: error: ':' expected but ')' found.
def reverse(l): List[Int] = {
             ^Nlast:21: error: identifier expected but '}' found.
}
^